# core-api

./: .env.example  README.md  ai.py  config.py  databases.py  dependencies.py  docker-compose.yaml  funcs.py  general_schemas.py  logger_config.py  main.py  pyproject.toml
routes/ai_router/: ai_routes.py  schmeas.py
routes/frida_routes/: auth_router.py  crud.py  logger_router.py  schemas.py
routes/redis_routes/: crud.py  redis_routes.py  redis_schemas.py
